[package]
name = "futures-retry"
version = "0.3.3"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
description = "Retry your Futures and Streams!"
license = "MIT/Apache-2.0"
keywords = ["tokio", "futures", "retry"]
repository = "https://gitlab.com/mexus/futures-retry"
documentation = "https://docs.rs/futures-retry/"
readme = "README.md"
edition = "2018"

[dependencies]
futures-preview = { version = "0.3.0-alpha.17" }
pin-utils = "0.1.0-alpha.4"
tokio = { git = "https://github.com/tokio-rs/tokio/", features = [ "timer" ], default-features = false }

[dev-dependencies]
tokio = { git = "https://github.com/tokio-rs/tokio/", default-features = false, features = ["rt-full", "tcp"] }
